[gd_scene load_steps=6 format=3 uid="uid://x8cchff2ijbq"]

[ext_resource type="Script" path="res://assets/scripts/main_menu.gd" id="1_0n2ds"]
[ext_resource type="Shader" path="res://assets/materials/star_shader.gdshader" id="1_nxjiw"]
[ext_resource type="FontFile" uid="uid://wms0qaeinsqp" path="res://assets/fonts/astron-boy.video-regular.otf" id="3_j11jv"]
[ext_resource type="FontFile" uid="uid://d0uad58s1e1h2" path="res://assets/fonts/astron-boy.rg-regular.otf" id="4_qul0b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4s8jn"]
shader = ExtResource("1_nxjiw")
shader_parameter/dimensions = Vector2(640, 640)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.5
shader_parameter/small_stars_near_size = 1.0
shader_parameter/large_stars = 8.0
shader_parameter/large_stars_far_size = 0.25
shader_parameter/large_stars_near_size = 0.75
shader_parameter/far_stars_color = Color(0.545521, 0.00374034, 0.944266, 1)
shader_parameter/near_stars_color = Color(1, 1, 0.788235, 1)
shader_parameter/base_scroll_speed = 0.05
shader_parameter/additional_scroll_speed = 0.05

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0n2ds")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4s8jn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0876333, 0.0775105, 0.0838869, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -129.0
offset_top = 20.0
offset_right = 129.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.857365, 0.760608, 0.472952, 1)
theme_override_fonts/font = ExtResource("3_j11jv")
theme_override_font_sizes/font_size = 98
text = "Galaxion++"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(210, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.85098, 0.745098, 0.462745, 1)
theme_override_colors/font_pressed_color = Color(0.641667, 0.215718, 0.192857, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qul0b")
theme_override_font_sizes/font_size = 48
text = " Play "
flat = true

[node name="Arcade" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.85098, 0.745098, 0.462745, 1)
theme_override_colors/font_pressed_color = Color(0.641667, 0.215718, 0.192857, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qul0b")
theme_override_font_sizes/font_size = 48
text = "Arcade Mode"
flat = true

[node name="Controls" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.85098, 0.745098, 0.462745, 1)
theme_override_colors/font_pressed_color = Color(0.643137, 0.215686, 0.192157, 1)
theme_override_fonts/font = ExtResource("4_qul0b")
theme_override_font_sizes/font_size = 48
text = "Controls"
flat = true

[node name="ControlsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -252.0
offset_right = 193.5
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31802, 0.31802, 0.31802, 1)

[node name="MarginContainer" type="MarginContainer" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="RichTextLabel" type="RichTextLabel" parent="ControlsPanel/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_qul0b")
theme_override_font_sizes/normal_font_size = 36
text = "Controls:

Arrow Keys - Move Ship
Space - Shoot Projectile
Z - Change POV

Arcade Mode:

X - Accelerate
C - Deccelerate"

[node name="Button" type="Button" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_right = -6.0
offset_bottom = 47.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qul0b")
theme_override_font_sizes/font_size = 32
text = "X"
flat = true

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Arcade" to="." method="_on_arcade_pressed"]
[connection signal="pressed" from="Buttons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="ControlsPanel/Button" to="." method="_on_x_button_pressed"]
